--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,6 @@
 <nav>
   <app-nav></app-nav>
 </nav>
-<main>
-  <router-outlet></router-outlet>
+<main [@routerTransition]="getState(ro)">
+  <router-outlet #ro="outlet"></router-outlet>
 </main>
-
-
-
-<!-- <section>
-  <nav>
-    <app-nav></app-nav>
-  </nav>
-  <main>
-    <router-outlet></router-outlet>
-  </main>
-</section> -->
