--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="half"> -->
 
-  <div class="intro">
+  <div class="container-intro">
     <h1>Zostań na chwilę i posłuchaj.</h1>
     <p> Portfolio powstało jako projekt zaliczeniowy kierunku Programista Front-End z Angular - WSB </p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo adipisci, obcaecati molestias numquam maxime commodi inventore
