--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="con">
 
   <div class="logo" routerLink="/login">
-    <img src="./../../assets/shande.jpg" alt="Marcin Cyboran portfolio">
+    <img src="./../../assets/wolf-icon.png" alt="Marcin Cyboran portfolio">
   </div>
 
   <div class="navigation hidden" #menu>
