--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,16 +8,20 @@ nav {
   top: 0;
   height: 64px;
   width: 100%;
-  background-color: #181818;
+  background-color: #151515;
   overflow: hidden;
   z-index: 99;
 }
 
 main {
-  background-color: #252627;
   min-height: 100vh;
+  padding-top: 64px;
+  background-color: #252525;
+  background-image: url('./../assets/web-application-bg.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   overflow: hidden;
-  padding-top: 64px
 }
 
 @media screen and (min-width: 768px) {
