#contact work #admin/messages work #sort work #filterMessages work

--- a/src/app/admin-panel/add-post/add-post.component.html
+++ b/src/app/admin-panel/add-post/add-post.component.html
@@ -25,6 +25,6 @@
     <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
           <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
   </mat-form-field>
-  <button mat-raised-button type="submit" [disabled]="postForm.invalid">Add post</button>
+  <button mat-raised-button type="submit" color="warn" [disabled]="postForm.invalid">Add post</button>
 
 </form>
