--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,11 +1,10 @@
-<div class="myContainer">
-  <div class="myNav">
-    <div routerLink="add" routerLinkActive="navactive">Add post</div>
-    <div routerLink="dunno" routerLinkActive="navactive">Dunno yet</div>
-    <div routerLink="logger" routerLinkActive="navactive">Logger</div>
+<div class="admin-container">
+  <div class="nav">
+    <div routerLink="add" routerLinkActive="active">Add post</div>
+    <div routerLink="messages" routerLinkActive="active">Messages</div>
+    <div routerLink="logger" routerLinkActive="active">Logger</div>
   </div>
-  <div class="myBody">
+  <div class="body">
     <router-outlet></router-outlet>
-
   </div>
 </div>
