--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -72,8 +72,8 @@
       <p>Punktualny</p>
       <p>Dokładny</p>
       <p>Samodzielny</p>
-      <p>Dobrze zorganizowany</p>
-      <p>Elastyczny</p>
+      <p>Zorganizowany</p>
+      <p>Ugodowy</p>
     </div>
     <div class="heading" [@slide-header-left]='stateLeft[3]'>
       <mat-icon>notifications</mat-icon>
