--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="container-intro">
     <h1>Zostań na chwilę i posłuchaj.</h1>
-    <p> Portfolio powstało jako projekt zaliczeniowy kierunku Programista Front-End z Angular - WSB </p>
+    <p>Strona ta powstała jako projekt zaliczeniowy kierunku - Programista Front-End z AngularJS - Wyższej Szkoły Bankowej we Wrocławiu </p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo adipisci, obcaecati molestias numquam maxime commodi inventore
       sunt dolores id ad perspiciatis facilis. Earum natus impedit maiores magni corrupti, ratione dicta. Laborum officiis
       eum quidem laboriosam in facere voluptates possimus vel ea iusto fuga doloremque nisi impedit dolorem beatae dolorum
