--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
   </form>
 </section> -->
 <!-- <h1>Zapraszam do logowania</h1> -->
-<section>
+<section class="login-container">
   <form class="example-form" (ngSubmit)=login(logForm) #logForm="ngForm">
 
     <mat-form-field color="accent">
