--- a/src/app/admin-panel/add-post/add-post.component.css
+++ b/src/app/admin-panel/add-post/add-post.component.css
@@ -1,5 +1,4 @@
 .post-form {
-  /* background-color: brown; */
   padding: 40px 0;
 }
 
@@ -9,7 +8,7 @@
   padding-left: 20px;
   padding-right: 20px;
   margin: 0px auto;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(0, 0, 0, 0.4);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
 }
