--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,5 +1,10 @@
 :host {}
 
+h1,
+h2 {
+  font-weight: 300;
+}
+
 .loading,
 .loadingError {
   position: fixed;
@@ -26,15 +31,12 @@
 .blog-container {
   width: 100%;
   padding: 10px;
-  margin-bottom: 80px;
-  /* background-color: brown; */
-  /* min-width: 900px; */
-  /* margin: 0 auto; */
+  margin-bottom: 20px;
 }
 
 .blog-container>h1 {
   text-align: center;
-  padding: 50px 0;
+  padding: 40px 0;
 }
 
 .current-post {
@@ -42,7 +44,7 @@
   padding: 10px;
   display: flex;
   flex-flow: column nowrap;
-  background-color: rgba(255, 255, 255, .1);
+  background-color: rgba(0, 0, 0, 0.4);
   margin-bottom: 80px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
@@ -50,6 +52,7 @@
 }
 
 .current-post-img {
+  position: relative;
   flex: 0 0 200px;
   background-image: url("./../../assets/no-img.jpg");
   background-repeat: no-repeat;
@@ -57,38 +60,48 @@
   background-size: cover;
   max-height: 200px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 19);
+  border-radius: 5px;
+}
+
+.current-post-img:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .2);
 }
 
 .current-post-body {
-  flex: 1 1 65%;
-  padding: 0px;
   position: relative;
+  flex: 1 1;
 }
 
-.current-post-body .current-post-body-header,
-.current-post-body .current-post-body-date {
+.current-post-body-header,
+.current-post-body-date {
   margin-bottom: 20px;
   font-style: italic
 }
 
-.current-post-body .current-post-body-text {
+.current-post-body-text {
   text-align: justify;
   line-height: 150%;
   padding-bottom: 60px;
+  text-indent: 1em;
 }
 
-.current-post-body .current-post-body-date {
+.current-post-body-date {
   text-align: right;
 }
 
-.current-post-body .current-post-body-button {
+.current-post-body-button {
   position: absolute;
   bottom: 0;
   right: 0;
   transition: all .3s ease-in-out;
 }
 
-.current-post-body .current-post-body-button:hover {
+.current-post-body-button:hover {
   transform: translateY(5px);
 }
 
@@ -109,7 +122,7 @@
   flex: 0 0 48%;
   min-height: 200px;
   margin-bottom: 30px;
-  background-color: rgba(255, 255, 255, .05);
+  background-color: rgba(0, 0, 0, 0.4);
   padding: 10px;
   padding-bottom: 20px;
   border-radius: 10px;
@@ -119,7 +132,7 @@
 }
 
 .other-post:hover {
-  background-color: rgba(255, 255, 255, .15);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .other-post-img {
@@ -129,36 +142,51 @@
   background-position: center center;
   background-size: cover;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 19);
+  border-radius: 5px;
+}
+
+.other-post-img:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .2);
 }
 
 .other-post-body {
   position: relative;
 }
 
-.other-post-body .other-post-body-header {
+.other-post-body-header {
   margin: 15px 0;
   min-height: 80px;
-  /* text-indent: 1em; */
 }
 
-.other-post-body .other-post-body-date {
+.other-post-body-date {
   text-align: right;
   margin-bottom: 10px;
   font-style: italic
 }
 
-.other-post-body .other-post-body-text {
+.other-post-body-text {
   text-align: justify;
   overflow: hidden;
   margin-bottom: 20px;
-  height: 150px;
+  min-height: 150px;
+  text-indent: 1em;
 }
 
-.other-post-body .other-post-body-button {
+.other-post-body-button {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
   color: #fff;
+  transition: transform 0.2s linear;
+}
+
+.other-post-body-button:hover {
+  transform: translate(-50%, 5px);
 }
 
 @media screen and (min-width: 380px) {
@@ -170,108 +198,25 @@
 @media screen and (min-width: 768px) {
   .blog-container {
     max-width: 1140px;
-    margin: 0 auto;
-    margin-bottom: 80px;
-  }
-  .blog-container>h1 {
-    text-align: center;
-    padding: 50px 0;
+    margin: 0px auto;
+    padding: 40px;
   }
   .current-post {
-    padding: 40px;
-    display: flex;
+    padding: 20px;
     flex-flow: row nowrap;
-    background-color: rgba(255, 255, 255, .1);
-    margin-bottom: 80px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    border-radius: 10px;
-    overflow: hidden;
   }
   .current-post-img {
     flex: 0 0 35%;
     margin: 0px;
-    background-image: url("./../../assets/no-img.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    max-height: 200px;
   }
   .current-post-body {
     flex: 1 1 65%;
-    padding-left: 80px;
-    position: relative;
-  }
-  .current-post-body .current-post-body-header,
-  .current-post-body .current-post-body-date {
-    margin-bottom: 20px;
-    font-style: italic
-  }
-  .current-post-body .current-post-body-text {
-    text-align: justify;
-    line-height: 150%;
-    padding-bottom: 60px;
-  }
-  .current-post-body .current-post-body-date {
-    text-align: right;
-  }
-  .current-post-body .current-post-body-button {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    transition: all .3s ease-in-out;
-  }
-  .current-post-body .current-post-body-button:hover {
-    transform: translateY(5px);
+    margin-left: 40px;
   }
   .others {
-    display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
   }
   .other-post {
     flex: 0 0 30%;
-    min-height: 200px;
-    margin-bottom: 30px;
-    background-color: rgba(255, 255, 255, .05);
-    padding: 10px;
-    padding-bottom: 20px;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    transition: all 0.3s ease-in-out;
-  }
-  .other-post:hover {
-    background-color: rgba(255, 255, 255, .15);
-  }
-  .other-post-img {
-    height: 200px;
-    background-image: url("./../../assets/no-img.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-  }
-  .other-post-body {
-    position: relative;
-  }
-  .other-post-body .other-post-body-header {
-    margin: 15px 0;
-    /* text-indent: 1em; */
-  }
-  .other-post-body .other-post-body-date {
-    text-align: right;
-    margin-bottom: 10px;
-    font-style: italic
-  }
-  .other-post-body .other-post-body-text {
-    text-align: justify;
-    overflow: hidden;
-    margin-bottom: 20px;
-    height: 150px;
-  }
-  .other-post-body .other-post-body-button {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
   }
 }
