--- a/src/app/blog/pagination/pagination.component.css
+++ b/src/app/blog/pagination/pagination.component.css
@@ -11,17 +11,17 @@ ul {
 
 li {
   display: inline-block;
-  /* background-color: brown; */
-  padding: 4px 8px;
+  padding: 6px 12px;
   margin: 10px;
-  border: 1px solid #eee;
   border-radius: 10px;
 }
 
 li:hover {
   background-color: #181818;
+  cursor: pointer;
 }
 
 .active {
   background-color: #181818;
 }
+
