--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -1,10 +1,12 @@
 <img class="loading" *ngIf="isLoading" src="./../../assets/loading.svg" alt="loading gif">
 <h1 class="loadingError" *ngIf="loadingError">Something went wrong duhh : (</h1>
 
-<div *ngIf="post">
-
+<section class="post-container" *ngIf="post">
   <h1>{{post.title}}</h1>
   <p class="date">{{post.created}}</p>
   <p class="text">{{post.text}}</p>
+  <p class="back">
+    <span routerLink="/blog">GO BACK</span>
+  </p>
 
-</div>
+</section>
