--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,33 +1,38 @@
-:host {
-  color: #eee;
-}
+:host {}
 
-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex: 1 1 1px;
-  height: 100%;
-  position: relative;
+.login-container {
+  width: 100%;
+  padding: 10px;
 }
 
 .example-form {
+  margin: 0 auto;
+  margin-top: 80px;
   display: flex;
   flex-flow: column nowrap;
-  justify-content: center;
-  align-content: center;
-  min-width: 150px;
-  max-width: 400px;
-  width: 100%;
-  padding: 20px;
+  min-width: 160px;
+  max-width: 360px;
 }
 
 .mat-form-field {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .mat-raised-button {
   width: 100%;
   padding: 4px;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 380px) {
+  .login-container {
+    padding: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .login-container {
+    padding: 40px;
+    max-width: 1140px;
+    margin: 0 auto;
+  }
 }
