--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="con">
+<section class="con">
 
   <div class="logo" routerLink="/login">
     <img src="./../../assets/wolf-icon.png" alt="Marcin Cyboran portfolio">
@@ -43,16 +43,19 @@
   <div class="social">
 
     <div>
-      <i class="fab fa-github"></i>
+      <a href="https://github.com/marcincyboran" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
 
     <div>
-      <i class="fab fa-facebook-square"></i>
+      <a href="https://www.facebook.com/marcin.cyboran" target="_blank">
+        <i class="fab fa-facebook-square"></i>
+      </a>
     </div>
 
   </div>
   <div class="phone" (click)="showMenuPhone(menu)">
-      <mat-icon>menu</mat-icon>
-    </div>
-</div>
-
+    <mat-icon>menu</mat-icon>
+  </div>
+</section>
