--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,28 +1,141 @@
-:host {
-  display: block;
-  height: 100vh;
-  overflow: auto;
-  background-image: url('./../../assets/progress.png');
-  background-size: 20%;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
+:host {}
 
-/* .portfolio-container {
+.portfolio-container {
   width: 100%;
   padding: 10px;
-  background-color: #eee;
+  margin-bottom: 20px;
   margin-top: 64px;
   min-height: 700px;
-  display: flex;
-  flex-flow: column nowrap;
+}
+
+h1 {
+  text-align: center;
+  padding: 40px 0;
+}
+
+.header {
+  padding: 15px;
+  padding-bottom: 0px;
+  margin-bottom: 20px;
   position: relative;
+}
+
+.header button {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  color: white;
+  padding: 2px 0;
+  font-size: 1.25em;
+  font-weight: 300;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  letter-spacing: 2px;
+  transition: border .2s linear;
+}
+
+.header button.sort-btn {
+  border-bottom: 1px solid transparent;
+  transition: color .2s linear;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  transform: translateX(0%);
+}
+
+.header button:hover {
+  border-bottom: 1px solid #F44336;
+}
+
+.header button.sort-btn:hover {
+  border-bottom: 1px solid transparent;
+  color: #F44336;
+}
+
+.body {}
+
+ul {
+  margin: 0;
+  padding: 15px;
+}
+
+ul>li {
+  display: inline-block;
+  width: 99%;
+  position: relative;
+  background-color: rgba(0, 0, 0, 1);
+  margin: 1%;
+}
+
+ul>li h2 {
+  font-size: 6vw;
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+  background-color: rgba(0, 0, 0, .7);
+  width: 100%;
+  text-align: center;
+  /* padding: 5px; */
+  letter-spacing: 1px;
+  transform: scale(1);
+  opacity: 0;
+  transition: transform .2s .2s linear, opacity .2s .2s ease-in-out, bottom .3s .2s ease-in-out;
+}
+
+ul>li img {
+  max-width: 100%;
+  height: auto;
+  position: relative;
+  transform: scale(1);
+  opacity: .9;
+  transition: transform .2s linear, opacity .2s linear;
+}
+
+ul>li:hover img {
+  transform: scale(1.1);
+  opacity: 1;
+  z-index: 10;
+}
+
+ul>li:hover h2 {
+  transform: scale(1.1);
+  z-index: 10;
+  opacity: 1;
+  bottom: 0;
+}
+
+@media screen and (min-width: 380px) {
+  .portfolio-container {
+    padding: 20px;
+  }
+  ul>li {
+    display: inline-block;
+    width: 47.5%;
+    margin: 1%
+  }
+  ul>li h2 {
+    font-size: 3vw;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .portfolio-container {
     max-width: 1140px;
-    margin: 60px auto;
-    flex-flow: row nowrap;
+    margin: 0px auto;
+    padding: 40px;
   }
-} */
+  ul>li {
+    display: inline-block;
+    width: 31.8333%;
+    margin: .5%;
+  }
+  ul>li h2 {
+    font-size: 2vw;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  ul>li h2 {
+    font-size: 1.5em;
+  }
+}
