--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 @import url('https://fonts.googleapis.com/css?family=Pacifico&subset=latin-ext');
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400&subset=latin-ext');
-
 /*
 font-family: 'Pacifico', cursive;
 font-family: 'Roboto', sans-serif;
@@ -13,12 +12,24 @@ font-family: 'Roboto', sans-serif;
 body {
   font-size: 16px;
 }
-h1,h2,h3, p {
+
+h1,
+h2,
+h3,
+p {
   margin: 0;
   padding: 0;
 }
 
-button:focus {outline:0;}
+h1,
+h2,
+h3 {
+  font-weight: 300;
+}
+
+button:focus {
+  outline: 0;
+}
 
 * {
   box-sizing: border-box;
@@ -35,21 +46,24 @@ button:focus {outline:0;}
   box-sizing: border-box;
 }
 
-
 /* ---------------- SCROLBAR --------------- */
+
 /* width */
+
 ::-webkit-scrollbar {
   width: 10px;
   background: #252627;
 }
 
 /* Track */
+
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 2px #252627;
   border-radius: 10px;
 }
 
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
   background: #454647;
   box-shadow: inset 0 0 2px #252627;
@@ -57,6 +71,7 @@ button:focus {outline:0;}
 }
 
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
